--- a/css/style.css
+++ b/css/style.css
@@ -33,20 +33,28 @@ nav> ul li{
 .menu_button>a{
     text-decoration: none;
     color: black;
+    vertical-align: middle;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .menu_button{
-    text-decoration: none;
     background-color: var(--background_button) ;
-    border: none;
     width: 3rem;
     height: 3rem;
     border-radius: 50%;
     box-shadow: 2px 3px 4px rgba(0, 0, 0, 0.349);
+    position: relative;
 }
 
 .menu_button:hover {
     background-color: var(--button-hover) ;
+}
+
+.menu_button:hover a{
     color: var(--background_button);
 }
 
